--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
   "author": "Saies Shaikh",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.21.0"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.4"
+    "express": "^4.21.0",
+    "nodemon": "^3.1.6"
   }
 }
